--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,9 +1,17 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,700&display=swap');
+
+
+html, body {
+    font-family: 'Roboto', sans-serif;
+    color: #2c3e50;
+    background-color: #eef2f5;
+}
+
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
+    text-align: center;   
 }
 
 nav {
