--- a/src/assets/scss/views/_login.scss
+++ b/src/assets/scss/views/_login.scss
@@ -1,13 +1,21 @@
 .login-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: inherit;
+
     .login-wrapper {
         position: relative;
         width: 768px;
         height: 480px;
         border-radius: 10px;
         overflow: hidden;
-        box-shadow: 0 15px 30px rgba(0, 0, 0, .2),
-            0 10px 10px rgba(0, 0, 0, .2);
-        background: linear-gradient(to bottom, #efefef, #ccc);
+        background: rgba( 255, 255, 255, 0.3 );
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+        backdrop-filter: blur( 8.5px );
+        -webkit-backdrop-filter: blur( 8.5px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
 
         .overlay-container {
             position: absolute;
@@ -29,6 +37,21 @@
             color: #fff;
             transform: translateX(0);
             transition: transform .5s ease-in-out;
+
+            h1 {
+                font-size: 1.8rem;
+            }
+            h2 {
+                font-size: 1.2rem;
+                padding: 3rem 0 1.5rem;
+            }
+            .help-text {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 0.5rem;
+            }
         }
 
         @mixin overlays($property) {
@@ -36,11 +59,11 @@
             top: 0;
             display: flex;
             align-items: center;
-            justify-content: space-around;
+            justify-content: center;
             flex-direction: column;
             padding: 70px 40px;
-            width: calc(50% - 80px);
-            height: calc(100% - 140px);
+            width: 50%;
+            height: 100%;
             text-align: center;
             transform: translateX($property);
             transition: transform .5s ease-in-out;
@@ -56,85 +79,21 @@
         }
     }
 
-
-    h2 {
-        margin: 0;
-    }
-
-    p {
-        margin: 20px 0 30px;
-    }
-
-    a {
-        color: #222;
-        text-decoration: none;
-        margin: 15px 0;
-        font-size: 1rem;
-    }
-
-    button {
-        border-radius: 20px;
-        border: 1px solid #009345;
-        background-color: #009345;
-        color: #fff;
-        font-size: 1rem;
-        font-weight: bold;
-        padding: 10px 40px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: transform .1s ease-in;
-
-        &:active {
-            transform: scale(.9);
-        }
-
-        &:focus {
-            outline: none;
-        }
-    }
-
-    button.invert {
-        background-color: transparent;
-        border-color: #fff;
-    }
-
     form {
+
         position: absolute;
         top: 0;
         display: flex;
         align-items: center;
         justify-content: space-around;
         flex-direction: column;
-        padding: 90px 60px;
-        width: calc(50% - 120px);
-        height: calc(100% - 180px);
+        padding: 50px 60px;
+        width: 50%;
+        height: 100%;
         text-align: center;
-        background: linear-gradient(to bottom, #efefef, #ccc);
-        transition: all .5s ease-in-out;
+        background: rgb(245, 242, 242);
+        transition: all 0.5s ease-in-out;
 
-        div {
-            font-size: 1rem;
-        }
-
-        input {
-            background-color: #eee;
-            border: none;
-            padding: 8px 15px;
-            margin: 6px 0;
-            width: calc(100% - 30px);
-            border-radius: 15px;
-            border-bottom: 1px solid #ddd;
-            box-shadow: inset 0 1px 2px rgba(0, 0, 0, .4),
-                0 -1px 1px #fff,
-                0 1px 0 #fff;
-            overflow: hidden;
-
-            &:focus {
-                outline: none;
-                background-color: #fff;
-            }
-        }
     }
 
     .sign-in {
@@ -194,5 +153,11 @@
         }
     }
 
-
+    .material-icons {
+        font-size:large;
+    }
+    .vs-input--placeholder {
+        left: 0;
+        text-align: left;
+    }
 }
