--- a/src/assets/scss/views/_login.scss
+++ b/src/assets/scss/views/_login.scss
@@ -93,7 +93,11 @@
         text-align: center;
         background: rgb(245, 242, 242);
         transition: all 0.5s ease-in-out;
-
+        .inputs-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
     }
 
     .sign-in {
