--- a/src/assets/scss/components/_form-register.scss
+++ b/src/assets/scss/components/_form-register.scss
@@ -1,10 +1,20 @@
 .form-container {
-    padding: 4rem 8rem,;
     .form-wrapper {
-        border-radius: 37px;
-        background: #f5f5f5;
-        box-shadow:  39px 39px 77px #d3d3d3,
-                     -39px -39px 77px #ffffff;
-        padding: 5rem;
+        .inputs-wrapper {
+            margin-top: 2rem;
+        }
+        textarea {
+            height: 150px;
+            font-family: "Roboto", sans-serif;
+        }
     }
+
+    .con-select,
+    .vs-con-input-label {
+        text-align: left;
+    }
+    .material-icons {
+        font-size: large;
+    }
+
 }
