--- a/src/assets/scss/components/_kanban.scss
+++ b/src/assets/scss/components/_kanban.scss
@@ -338,3 +338,12 @@ ul {
         }
     }
 }
+
+.delete-grpup {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    a {
+        cursor: pointer;
+    }
+}
